# zilla

./: .env.example  .gitattributes  .gitignore  AGY_Desktop_Manager.spec  CHANGELOG.md  FORCE_KILL_BOT.bat  HANDOFF.md  MANUAL.md  PLAN.md  README.md  SESSIONS.md  START_BACKGROUND.bat  START_BOT.bat  STATUS.md  STOP_BACKGROUND.bat  Start Zilla (Invisible).vbs  Stop Zilla.vbs  WATCH_LIVE.bat  ZILLA_PROGRESS.md  agent_manager.py  agy_runner.py  audio_handler.py  authorized_users.json  autoharness.py  backends.py  bot.py  bot_instructions.md  brain_manager.py  build_app.bat  chat_bus.py  cli_engine.py  cli_router.py  comments.txt  config.py  desktop_formatter.py  file_handler.py  formatter.py  google_workspace.py  gui_app.py  gui_main.py  (+62 more)
docs/dev/: AI_CONTEXT.md  AI_SETUP.md  AUDIT_PONYTAIL_2026-07-19.md  CORE_API.md  K5_RESEARCH_NOTES.md  PHASE0_FINDINGS.md  RESEARCH_OPENCLAW_HERMES.md  RESEARCH_ORCHESTRATION_REVIEW.md  STATUS.md
documents/: IMPLEMENTATION_PLAN_v2.md  MASTER_TASK_BRIEF.md  SESSION_PROMPT_BACKUP.md
zilla/: __init__.py  autoharness.py  backend_registry.py  backends.py  cli.py  cli_engine.py  config.py  configmenu.py  core.py  doctor.py  formatter.py  graph.py  graph_html.py  harness.py  health.py  heartbeat.py  interactive.py  media.py  memory.py  migrate.py  platform_compat.py  review.py  schedule_parse.py  schedules.py  security.py  sessions.py  store.py  users.py
zilla/tui/: __init__.py  __main__.py  app.py  app.tcss  core_setup.py  logo.py  widgets.py
zilla/tui/screens/: __init__.py  chat.py  graph.py  health.py  home.py  settings.py  skills.py
